# idioms

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
res/: dbyte_1x_LICENSE.txt
src/: CMakeLists.txt  main.c  pch.h  random.c  random.h  res_cache.c  res_cache.h  timestep.c  timestep.h  types.h
src/module/: context.c  context.h  debug.c  debug.h  input.c  input.h  map.c  map.h  render.c  render.h  ui.c  ui.h
